<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/base_margin"
    android:background="@drawable/shaped_rectangle">

    <ImageView
        android:id="@+id/flag"
        android:layout_width="@dimen/base_flag_width"
        android:layout_height="@dimen/base_flag_height"
        android:padding="@dimen/base_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:padding="@dimen/base_padding"
        android:singleLine="true"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/capitalName"
        app:layout_constraintStart_toEndOf="@id/flag"
        app:layout_constraintTop_toTopOf="@id/flag"
        tools:text="Country" />

    <TextView
        android:id="@+id/capitalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:padding="@dimen/base_padding"
        android:singleLine="true"
        android:text="@string/capital"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/flag"
        app:layout_constraintStart_toEndOf="@id/flag"
        app:layout_constraintTop_toBottomOf="@id/countryName" />

    <TextView
        android:id="@+id/regionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/base_padding"
        android:text="@string/region"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flag" />

    <TextView
        android:id="@+id/subRegionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/base_padding"
        android:text="@string/subRegion"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionName" />

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/base_padding"
        android:text="@string/population"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subRegionName" />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/base_padding"
        android:text="@string/area"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/population" />

    <TextView
        android:id="@+id/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:padding="@dimen/base_padding"
        android:text="@string/languages"
        android:textSize="@dimen/addition_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/area" />

</androidx.constraintlayout.widget.ConstraintLayout>